--- a/src/styles/Home.module.scss
+++ b/src/styles/Home.module.scss
@@ -1,5 +1,5 @@
 @import 'variables';
 .fontL {
-  font-size: 2rem;
-  background-color: $blue;
+  font-size: $size;
+  // background-color: $blue;
 }
